# ComfyUI-WanVideoWrapper

./: .gitignore  __init__.py  fp8_optimization.py  latent_preview.py  nodes.py  nodes_deprecated.py  nodes_model_loading.py  nodes_utility.py  pyproject.toml  readme.md  requirements.txt  utils.py
ATI/: motion.py  motion_patch.py  nodes.py
cache_methods/: cache_methods.py  nodes_cache.py
context_windows/: context.py
controlnet/: nodes.py  wan_controlnet.py
enhance_a_video/: LICENSE  enhance.py  globals.py
example_workflows/: wanvideo_14B_pusa_I2V_example_01.json  wanvideo_1_3B_ReCamMaster_example_01.json  wanvideo_1_3B_VACE_examples_01.json  wanvideo_1_3B_VACE_examples_02.json  wanvideo_1_3B_VACE_examples_03.json  wanvideo_1_3B_control_example_01.json  wanvideo_1_3B_control_lora_example_01.json  wanvideo_480p_I2V_endframe_example_01.json  wanvideo_480p_I2V_example_01.json  wanvideo_480p_I2V_example_02.json  wanvideo_480p_I2V_example_03.json  wanvideo_ATI_testing_01.json  wanvideo_FLF2V_720P_example_01.json  wanvideo_FLF2V_720P_example_02.json  wanvideo_Fun_control_camera_example_01.json  wanvideo_Fun_control_example_01.json  wanvideo_I2V_FantasyTalking_example_01.json  wanvideo_T2V_example_01.json  wanvideo_T2V_example_02.json  wanvideo_flowedit_I2V_example_01.json  wanvideo_long_T2V_example_01.json  wanvideo_multitalk_test_01.json  wanvideo_multitalk_test_02.json  wanvideo_multitalk_test_context_windows_01.json  wanvideo_phantom_subject2vid_example_01.json  wanvideo_skyreels_a2_example_01.json  wanvideo_skyreels_diffusion_forcing_extension_example_01.json  (+1 more)
(+44 files in other folders)
